--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "eslintConfig": {
     "extends": [
       "wesbos"
-    ]
+    ],
+    "rules": {
+      "react/prop-types": "off"
+    }
   }
 }
